--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3832,8 +3832,8 @@ div .bootstrap-select > .dropdown-toggle:focus {
 
 .url-input {
   border-radius: 0px !important;
-  width: 246px;
-  height: 43px;
+  width: 230px;
+  height: 50px;
   -o-object-fit: contain;
   object-fit: contain;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0);
@@ -6000,17 +6000,20 @@ ul {
   margin-bottom: 16px;
 }
 
-.programming-slider-dots-canal-claro .slick-dots {
+.programming-slider-dots-canal-claro .slick-dots,
+.programming-slider-dots-cinema .slick-dots {
   position: static;
   text-align: left;
   bottom: auto;
 }
 
-.programming-slider-dots-canal-claro .presentation {
+.programming-slider-dots-canal-claro .presentation,
+.programming-slider-dots-cinema .presentation {
   margin-right: 24px;
 }
 
-.programming-slider-dots-canal-claro .slick-dots li {
+.programming-slider-dots-canal-claro .slick-dots li,
+.programming-slider-dots-cinema .slick-dots li {
   height: 37px;
   width: 37px;
   margin-right: 16px;
@@ -7016,6 +7019,7 @@ iframe {
   background-color: #ffeb5a;
   border: #ffeb5a;
   box-shadow: 0 2px 4px 0 #2d2926;
+  padding-left: 10px;
 }
 
 .container-promotitle {
@@ -7457,7 +7461,8 @@ select:focus {
 
 .synopsis-image-slider,
 .programming-slider,
-.programming-slider-canal-claro {
+.programming-slider-canal-claro,
+.programming-slider-claro-cinema {
   width: 1000px !important;
 }
 
@@ -7469,11 +7474,13 @@ select:focus {
   color: #ffffff !important;
 }
 
-.programming-slider-dots-canal-claro .slick-dots .slick-active {
+.programming-slider-dots-canal-claro .slick-dots .slick-active,
+.programming-slider-dots-cinema .slick-dots .slick-active {
   background-color: #0097a9;
 }
 
-.programming-slider-dots-canal-claro .slick-dots .slick-active p {
+.programming-slider-dots-canal-claro .slick-dots .slick-active p,
+.programming-slider-dots-cinema .slick-dots .slick-active p {
   color: #ffffff !important;
 }
 
