--- a/resources/sass/molecules/_lists.scss
+++ b/resources/sass/molecules/_lists.scss
@@ -359,7 +359,7 @@ ul {
     }
 }
 
-.programming-slider-dots-canal-claro {
+.programming-slider-dots-canal-claro, .programming-slider-dots-cinema {
     .slick-dots {
         position: static;
         text-align: left;
