--- a/resources/sass/organisms/_slider.scss
+++ b/resources/sass/organisms/_slider.scss
@@ -2,7 +2,8 @@
 
 .synopsis-image-slider,
 .programming-slider,
-.programming-slider-canal-claro {
+.programming-slider-canal-claro,
+.programming-slider-claro-cinema {
     width: 1000px !important;
 }
 
@@ -18,7 +19,7 @@
     }
 }
 
-.programming-slider-dots-canal-claro {
+.programming-slider-dots-canal-claro, .programming-slider-dots-cinema {
     .slick-dots {
         .slick-active {
             background-color: $teal;
