--- a/resources/sass/atoms/_img.scss
+++ b/resources/sass/atoms/_img.scss
@@ -335,6 +335,11 @@
     height: 472px;
 }
 
+#thumbnail-images-synopsis{
+    width: 366px;
+    height: 208px;
+}
+
 #thumbnail-home-vertical {
     .add-photo {
         width: 126px;
