--- a/resources/sass/atoms/_input.scss
+++ b/resources/sass/atoms/_input.scss
@@ -749,6 +749,14 @@ div .bootstrap-select>.dropdown-toggle:focus {
     object-fit: contain;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0);
 }
+.input-information {
+    border-radius: 0px !important;
+    width: 140px;
+    height: 22px;
+    -o-object-fit: contain;
+    object-fit: contain;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0);
+}
 
 .input-title {
     width: 634px;
