--- a/resources/sass/atoms/_text.scss
+++ b/resources/sass/atoms/_text.scss
@@ -128,7 +128,10 @@
     color: $coolGray;
     font-family: $MontserratBold;
 }
-
+.a-text-bold-greyish-brown-two {
+    font-family: $MontserratBold;
+    color: $greyish-brown-two;
+}
 .a-text-bold-warm-grey-three {
     font-family: $MontserratBold;
     color: $warm-grey-three;
