--- a/resources/sass/organisms/_container.scss
+++ b/resources/sass/organisms/_container.scss
@@ -412,7 +412,15 @@ iframe {
     height: 461px;
     
 }
+.edit-text-synopsis{
+    resize: none;
+    border: none;
+    padding: 8px;
+    width: 100%;
+    height: 85%;
+    outline: none !important;
 
+}
 
 .container-promo-cinema {
 
