--- a/resources/sass/organisms/_slider.scss
+++ b/resources/sass/organisms/_slider.scss
@@ -3,7 +3,7 @@
 .synopsis-image-slider,
 .programming-slider,
 .programming-slider-canal-claro,
-.programming-slider-claro-cinema {
+.programming-slider-claro-cinema,
 .programming-slider-concert-channel {
     width: 1000px !important;
 }
@@ -23,7 +23,7 @@
     }
 }
 
-.programming-slider-dots-canal-claro, .programming-slider-dots-cinema {
+.programming-slider-dots-cinema,
 .programming-slider-dots-canal-claro,
 .carrusel1-slider-dots1 {
     .slick-dots {
