--- a/resources/sass/atoms/_input.scss
+++ b/resources/sass/atoms/_input.scss
@@ -814,3 +814,10 @@ div .bootstrap-select>.dropdown-toggle:focus {
         color: $warmGrey;
     }
 }
+
+.label-active {
+    background-color: $teal;
+    color: $white;
+    border: none;
+    font-family: $MontserratBlack;
+}
