--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -30,3 +30,18 @@ $slick-loader-path: "~slick-carousel/slick/"; // To add
 @import "./helpers/cursor";
 @import "./helpers/spacing";
 @import "./organisms/slider";
+
+.fade-grilla {
+    animation-name: fade;
+    animation-duration: 1s;
+}
+
+@keyframes fade {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
