--- a/resources/sass/organisms/_header.scss
+++ b/resources/sass/organisms/_header.scss
@@ -37,3 +37,40 @@ header {
     height: 100px;
     z-index: 9;
 }
+.home-header {
+    position: relative;
+    overflow-x: hidden;
+  }
+  .circle-video {
+    display: none;
+    margin: auto;
+    clip-path: circle(50% at 80% 21%);
+    position: absolute;
+    right: 0%;
+    width: 635px;
+    height: 587px;
+    z-index: 1;
+    overflow: hidden;
+    max-width: 1000px;
+  }
+  .home-video {
+    right: 0;
+    top: 0;
+    width: 100%;
+    overflow: hidden;
+  }  
+  .header {
+    position: relative;
+    width: 100%;
+    //height: 205px;
+    overflow: hidden;
+  }
+  .header-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-transform: uppercase;
+    height: 100%;
+    text-align: center;
+    font-family:$MontserratBlack;
+  }  
