--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6617,7 +6617,6 @@ a:hover {
   -o-object-fit: cover;
      object-fit: cover;
   position: absolute;
-  top: 10px;
 }
 
 .img-promo {
@@ -6915,6 +6914,15 @@ a:hover {
   border-radius: 0;
   padding: 1% 2%;
   margin: auto;
+}
+
+.m-schedule {
+  margin-bottom: 9px;
+}
+
+.img-carrusel-home {
+  width: 100%;
+  left: 0%;
 }
 
 .dropdown-menu {
@@ -7232,6 +7240,13 @@ iframe {
   height: 56px;
 }
 
+.edit-rectangle-max-container {
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+  border-radius: 20px;
+  width: 100%;
+  height: 56px;
+}
+
 .edit-rectangle-container {
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
   border-radius: 20px;
@@ -7396,6 +7411,12 @@ iframe {
 .max-width-modal-xl {
   max-width: 1350px;
   margin: auto;
+}
+
+.text-small-rectangle {
+  margin-bottom: -10px;
+  text-align: left;
+  margin-left: 72px;
 }
 
 @font-face {
