--- a/resources/sass/organisms/_container.scss
+++ b/resources/sass/organisms/_container.scss
@@ -325,6 +325,13 @@ iframe {
     height: 56px;
 }
 
+.edit-rectangle-max-container {
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+    border-radius: 20px;
+    width: 100%;
+    height: 56px;
+}
+
 .edit-rectangle-container {
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
     border-radius: 20px;
@@ -489,4 +496,10 @@ iframe {
 .max-width-modal-xl{
     max-width: 1350px;
     margin: auto;
+}
+
+.text-small-rectangle {
+    margin-bottom: -10px;
+    text-align: left;
+    margin-left: 72px;
 }
