esqueleto del footer

--- a/resources/sass/atoms/_button.scss
+++ b/resources/sass/atoms/_button.scss
@@ -990,6 +990,14 @@
     border-radius: 18px !important;
     background: rgba(255, 255, 255, 0.8) !important;
 }
+.black-shadow {
+  width: 100px;
+  height: 48px;
+  opacity: 0.8;
+  border-radius: 27px;
+  background-color: rgba(0, 0, 0, 0.7);
+   
+}
 
 
 .programming-dots {
