--- a/resources/sass/molecules/_modal.scss
+++ b/resources/sass/molecules/_modal.scss
@@ -460,6 +460,14 @@ a:hover {
     padding: 1% 2%;
     margin: auto;
 }
+.modal-img-carrusel {
+    width: 100%;
+    height: 666px;
+    justify-content: space-around;
+    display: flex;
+    align-items: center;
+    text-align: center;
+} 
 .m-schedule {
     margin-bottom: 9px;
 }
