--- a/resources/sass/organisms/_container.scss
+++ b/resources/sass/organisms/_container.scss
@@ -419,6 +419,11 @@ iframe {
     height: 461px;
     
 }
+.container-edit-title-sinopsis{
+    width: 824px;
+    height: 65px;
+}
+
 .edit-text-synopsis{
     resize: none;
     border: none;
