--- a/public/css/app.css
+++ b/public/css/app.css
@@ -71,7 +71,7 @@ body {
   display: none;
 }
 
-[dir=rtl] .slick-slide {
+[dir="rtl"] .slick-slide {
   float: right;
 }
 
@@ -177,7 +177,7 @@ body {
   left: -25px;
 }
 
-[dir=rtl] .slick-prev {
+[dir="rtl"] .slick-prev {
   left: auto;
   right: -25px;
 }
@@ -186,7 +186,7 @@ body {
   content: "\2190";
 }
 
-[dir=rtl] .slick-prev:before {
+[dir="rtl"] .slick-prev:before {
   content: "\2192";
 }
 
@@ -194,7 +194,7 @@ body {
   right: -25px;
 }
 
-[dir=rtl] .slick-next {
+[dir="rtl"] .slick-next {
   left: -25px;
   right: auto;
 }
@@ -203,7 +203,7 @@ body {
   content: "\2192";
 }
 
-[dir=rtl] .slick-next:before {
+[dir="rtl"] .slick-next:before {
   content: "\2190";
 }
 
@@ -3235,23 +3235,23 @@ body {
   letter-spacing: normal;
 }
 
-input[type=radio]:checked + .a-btn-check:before {
+input[type="radio"]:checked + .a-btn-check:before {
   content: "\2713";
   font-size: 30px;
   color: #009245;
 }
 
-input[type=radio]:checked + .hombre-estilo {
+input[type="radio"]:checked + .hombre-estilo {
   background: #03ad50;
   color: #ffffff;
   border: none;
 }
 
-input[type=checkbox] {
+input[type="checkbox"] {
   display: none;
 }
 
-input[type=radio] {
+input[type="radio"] {
   display: none;
 }
 
@@ -3288,13 +3288,13 @@ option:checked + .roles {
   border: none;
 }
 
-input[type=radio]:checked + .mujer-estilo {
+input[type="radio"]:checked + .mujer-estilo {
   background: #03ad50;
   color: #ffffff;
   border: none;
 }
 
-input[type=radio]:checked + .mujer-estilo1 {
+input[type="radio"]:checked + .mujer-estilo1 {
   background: #03ad50;
   color: #ffffff;
   border: none;
@@ -3311,7 +3311,7 @@ input[type="radio"]:checked + .no-estilo {
     border: none;
 }*/
 
-input[type=radio]:checked + .switch-label {
+input[type="radio"]:checked + .switch-label {
   background-color: #0097a9;
   color: #ffffff;
   border: none;
@@ -3322,13 +3322,13 @@ input[type=radio]:checked + .switch-label {
   font-family: "Montserrat-SemiBold";
 }
 
-input[type=radio]:checked + .si-estilo1 {
+input[type="radio"]:checked + .si-estilo1 {
   background-color: #4c4b4b;
   color: #ffffff;
   border: none;
 }
 
-input[type=radio]:checked + .no-estilo1 {
+input[type="radio"]:checked + .no-estilo1 {
   background-color: #4c4b4b;
   color: #ffffff;
   border: none;
@@ -3789,7 +3789,7 @@ input[type=radio]:checked + .no-estilo1 {
   cursor: pointer;
 }
 
-.list1:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
+.list1:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
   width: 100% !important;
 }
 
@@ -3888,7 +3888,7 @@ div .bootstrap-select > .dropdown-toggle:focus {
   box-sizing: border-box;
 }
 
-.listcinema:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
+.listcinema:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
   width: 100% !important;
 }
 
@@ -4413,8 +4413,8 @@ div .bootstrap-select > .dropdown-toggle:focus {
 
 .veri {
   /*display: none;
-  position: absolute;
-  top: -172px;*/
+    position: absolute;
+    top: -172px;*/
   display: none;
   position: absolute;
   left: 30px;
@@ -4430,8 +4430,8 @@ div .bootstrap-select > .dropdown-toggle:focus {
 
 .edita {
   /*display: none;
-  position: absolute;
-  top: 32px;*/
+    position: absolute;
+    top: 32px;*/
   display: none;
   position: absolute;
   left: 30px;
@@ -4447,8 +4447,8 @@ div .bootstrap-select > .dropdown-toggle:focus {
 
 .borra {
   /*display: none;
-  position: absolute;
-  top: 66px;*/
+    position: absolute;
+    top: 66px;*/
   display: none;
   position: absolute;
   left: 30px;
@@ -6879,7 +6879,7 @@ a:hover {
   border-radius: 7px;
   padding: 7px 15px;
   display: inline;
-  opacity: 0.8;
+  opacity: .8;
 }
 
 .ipt-home-canales {
