--- a/resources/sass/atoms/_input.scss
+++ b/resources/sass/atoms/_input.scss
@@ -858,3 +858,8 @@ div .bootstrap-select>.dropdown-toggle:focus {
 .opa-holder::placeholder {
     opacity: 0.4;
 }
+
+.synopsis-modal-title {
+    background-color: black;
+    border: none
+}
