carrusel canal claro completo

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3846,7 +3846,7 @@ div .bootstrap-select > .dropdown-toggle:focus {
 }
 
 .bootstrap-select > .dropdown-toggle.bs-placeholder {
-  color: white !important;
+  color: white;
 }
 
 .btn.focus,
@@ -7512,9 +7512,9 @@ iframe {
 }
 
 .text-small-rectangle {
-  margin-bottom: -10px;
-  text-align: left;
-  margin-left: 72px;
+  position: absolute;
+  top: 0;
+  left: 38%;
 }
 
 @font-face {
