--- a/resources/sass/organisms/_container.scss
+++ b/resources/sass/organisms/_container.scss
@@ -504,7 +504,7 @@ iframe {
 }
 
 .text-small-rectangle {
-    margin-bottom: -10px;
-    text-align: left;
-    margin-left: 72px;
+    position: absolute;
+    top: 0;
+    left: 38%;
 }
