--- a/resources/sass/molecules/_modal.scss
+++ b/resources/sass/molecules/_modal.scss
@@ -460,13 +460,14 @@ a:hover {
     padding: 2% 5%;
 }
 
-.img-logo-home {
-    width: 350px;
-    left: 0%;
-}
+// .img-logo-home {
+//     width: 350px;
+//     left: 0%;
+// }
 
 .img-logo-home-claro {
-    width: 90%;
+    width: 98%;
+    height: 98%;
 }
 
 .img-logo-home-concert {
