arreglos de diseño y landing de home en claro cinema

--- a/resources/sass/atoms/_input.scss
+++ b/resources/sass/atoms/_input.scss
@@ -864,3 +864,6 @@ div .bootstrap-select>.dropdown-toggle:focus {
     background-color: black;
     border: none
 }
+.backwhite{
+    background: white
+}
