--- a/public/css/app.css
+++ b/public/css/app.css
@@ -434,6 +434,10 @@ body {
   font-size: 16px;
 }
 
+.h1 {
+  font-size: 21px !important;
+}
+
 .text-small {
   font-size: 14px;
 }
@@ -4203,6 +4207,10 @@ div .bootstrap-select > .dropdown-toggle:focus {
   border: none;
 }
 
+.backwhite {
+  background: white;
+}
+
 .line {
   width: 100%;
   height: 1px;
@@ -4713,6 +4721,10 @@ div .bootstrap-select > .dropdown-toggle:focus {
 
 .text-normal {
   font-size: 16px;
+}
+
+.h1 {
+  font-size: 21px !important;
 }
 
 .text-small {
