--- a/resources/sass/molecules/_modal.scss
+++ b/resources/sass/molecules/_modal.scss
@@ -559,3 +559,38 @@ a:hover {
 
 // CARRUSEL
 // HOME
+// FOOTER
+// TERMINOS Y CONDICIONES
+.modal-terminos-footer-width {
+    width: 1000px !important;
+    max-width: 1000px !important;
+}
+
+.modal-terminos-footer {
+    border-radius: 0 !important;
+    padding: 2% 5%;
+}
+.txa-tercon {
+    border-radius: 15px;
+    width: 100%;
+    box-shadow: 2px 3px 5px 1px rgba(0, 0, 0, 0.5);
+    padding: 10px 0 10px 15px;
+    height: 580px;
+}
+.txa-tercon input {
+    width: 100%;
+    display: block;
+    text-transform: uppercase;
+    border: none;
+}
+.txa-tercon textarea {
+    width: 100%;
+    display: block;
+    resize: none;
+    border: none;
+    height: 92%;
+    padding-right: 25px;
+}
+
+// TERMINOS Y CONDICIONES
+// FOOTER
